rajout div allchoix

--- a/A-la-francaise.html
+++ b/A-la-francaise.html
@@ -42,139 +42,145 @@
         <div class="entre-plat">
             <div class="menu">
                 <h3 class="menu__repas">ENTRÉES</h3>
-                <!--ENTREE UNE-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_A_la_francaise' id='entree1' class='selection'>
-                    <label for='entree1' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Tartare de poulpe acidulé</span>
-                            <span class="assiette__texte--deux">Aux zestes d'orange</span>
-                        </span>
-                        <span class="assiette__prix">25€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--ENTREE DEUX-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_A_la_francaise' id='entree2' class='selection'>
-                    <label for='entree2' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Velouté de légumes d'antan</span>
-                            <span class="assiette__texte--deux">Carotte, panais, topinambour</span>
-                        </span>
-                        <span class="assiette__prix">35€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--ENTREE TROIS-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_A_la_francaise' id='entree3' class='selection'>
-                    <label for='entree3' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Soupe à l'oignon</span>
-                            <span class="assiette__texte--deux">Revisitée</span>
-                        </span>
-                        <span class="assiette__prix">20€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
+                <div class="menu__repas--allchoix">
+                    <!--ENTREE UNE-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_A_la_francaise' id='entree1' class='selection'>
+                        <label for='entree1' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Tartare de poulpe acidulé</span>
+                                <span class="assiette__texte--deux">Aux zestes d'orange</span>
+                            </span>
+                            <span class="assiette__prix">25€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--ENTREE DEUX-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_A_la_francaise' id='entree2' class='selection'>
+                        <label for='entree2' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Velouté de légumes d'antan</span>
+                                <span class="assiette__texte--deux">Carotte, panais, topinambour</span>
+                            </span>
+                            <span class="assiette__prix">35€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--ENTREE TROIS-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_A_la_francaise' id='entree3' class='selection'>
+                        <label for='entree3' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Soupe à l'oignon</span>
+                                <span class="assiette__texte--deux">Revisitée</span>
+                            </span>
+                            <span class="assiette__prix">20€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
                 </div>
             </div>
             <div class="menu_p">
-                <p class="menu__repas">PLATS</p>
-                <!--PLAT UN-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_A_la_francaise' id='repas1' class='selection'>
-                    <label for='repas1' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Coquilles Saint-Jacques</span>
-                            <span class="assiette__texte--deux">Accompagnées d'une purée de panais</span>
-                        </span>
-                        <span class="assiette__prix">40€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--PLAT DEUX-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_A_la_francaise' id='plat2' class='selection'>
-                    <label for='plat2' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Magret de canard</span>
-                            <span class="assiette__texte--deux">Et parmentier de pommes de terre</span>
-                        </span>
-                        <span class="assiette__prix">35€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--PLAT TROIS-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_A_la_francaise' id='plat3' class='selection'>
-                    <label for='plat3' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Pigeonneau d’Ille-et-Vilaine</span>
-                            <span class="assiette__texte--deux">Sur son lit de gnocchis aux légumes</span>
-                        </span>
-                        <span class="assiette__prix">44€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
+                <h3 class="menu__repas">PLATS</h3>
+                <div class="menu__repas--allchoix">
+                    <!--PLAT UN-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_A_la_francaise' id='repas1' class='selection'>
+                        <label for='repas1' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Coquilles Saint-Jacques</span>
+                                <span class="assiette__texte--deux">Accompagnées d'une purée de panais</span>
+                            </span>
+                            <span class="assiette__prix">40€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--PLAT DEUX-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_A_la_francaise' id='plat2' class='selection'>
+                        <label for='plat2' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Magret de canard</span>
+                                <span class="assiette__texte--deux">Et parmentier de pommes de terre</span>
+                            </span>
+                            <span class="assiette__prix">35€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--PLAT TROIS-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_A_la_francaise' id='plat3' class='selection'>
+                        <label for='plat3' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Pigeonneau d’Ille-et-Vilaine</span>
+                                <span class="assiette__texte--deux">Sur son lit de gnocchis aux légumes</span>
+                            </span>
+                            <span class="assiette__prix">44€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
                 </div>
             </div>
         </div>
         <!--DESSERTS-->
         <div class="menu_d">
-            <p class="menu__repas">DESSERTS</p>
-            <!--DESSERT UN-->
-            <div class="menu__repas--choix">
-                <input type="checkbox" name='menu_A_la_francaise' id='dessert1' class='selection'>
-                <label for='dessert1' class='assiette assiette--un'>
-                    <span class="assiette__texte">
-                        <span class="assiette__texte--un">Pétales de violettes glacés</span>
-                        <span class="assiette__texte--deux">Et purée de noisettes</span>
-                    </span>
-                    <span class="assiette__prix">18€</span>
-                    <span class='assiette--valide'>
-                        <i class="fas fa-check-circle assiette--valide--icone"></i>
-                    </span>
-                </label>
-            </div>
-            <!--DESSERT DEUX-->
-            <div class="menu__repas--choix">
-                <input type="checkbox" name='menu_A_la_francaise' id='dessert2' class='selection'>
-                <label for='dessert2' class='assiette assiette--un'>
-                    <span class="assiette__texte">
-                        <span class="assiette__texte--un">Fondant au chocolat</span>
-                        <span class="assiette__texte--deux"> Revisité</span>
-                    </span>
-                    <span class="assiette__prix">22€</span>
-                    <span class='assiette--valide'>
-                        <i class="fas fa-check-circle assiette--valide--icone"></i>
-                    </span>
-                </label>
-            </div>
-            <!--DESSERT TROIS-->
-            <div class="menu__repas--choix">
-                <input type="checkbox" name='menu_A_la_francaise' id='dessert3' class='selection'>
-                <label for='dessert3' class='assiette assiette--un'>
-                    <span class="assiette__texte">
-                        <span class="assiette__texte--un">Millefeuille croustillant</span>
-                        <span class="assiette__texte--deux">Myrtilles et pâte d’amande</span>
-                    </span>
-                    <span class="assiette__prix">23€</span>
-                    <span class='assiette--valide'>
-                        <i class="fas fa-check-circle assiette--valide--icone"></i>
-                    </span>
-                </label>
+            <h3 class="menu__repas">DESSERTS</h3>
+            <div class="menu__repas--allchoix">
+                <!--DESSERT UN-->
+                <div class="menu__repas--choix">
+                    <input type="checkbox" name='menu_A_la_francaise' id='dessert1' class='selection'>
+                    <label for='dessert1' class='assiette assiette--un'>
+                        <span class="assiette__texte">
+                            <span class="assiette__texte--un">Pétales de violettes glacés</span>
+                            <span class="assiette__texte--deux">Et purée de noisettes</span>
+                        </span>
+                        <span class="assiette__prix">18€</span>
+                        <span class='assiette--valide'>
+                            <i class="fas fa-check-circle assiette--valide--icone"></i>
+                        </span>
+                    </label>
+                </div>
+                <!--DESSERT DEUX-->
+                <div class="menu__repas--choix">
+                    <input type="checkbox" name='menu_A_la_francaise' id='dessert2' class='selection'>
+                    <label for='dessert2' class='assiette assiette--un'>
+                        <span class="assiette__texte">
+                            <span class="assiette__texte--un">Fondant au chocolat</span>
+                            <span class="assiette__texte--deux"> Revisité</span>
+                        </span>
+                        <span class="assiette__prix">22€</span>
+                        <span class='assiette--valide'>
+                            <i class="fas fa-check-circle assiette--valide--icone"></i>
+                        </span>
+                    </label>
+                </div>
+                <!--DESSERT TROIS-->
+                <div class="menu__repas--choix">
+                    <input type="checkbox" name='menu_A_la_francaise' id='dessert3' class='selection'>
+                    <label for='dessert3' class='assiette assiette--un'>
+                        <span class="assiette__texte">
+                            <span class="assiette__texte--un">Millefeuille croustillant</span>
+                            <span class="assiette__texte--deux">Myrtilles et pâte d’amande</span>
+                        </span>
+                        <span class="assiette__prix">23€</span>
+                        <span class='assiette--valide'>
+                            <i class="fas fa-check-circle assiette--valide--icone"></i>
+                        </span>
+                    </label>
+                </div>
             </div>
         </div>
         <div class="container container_btn">
