--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -38,157 +38,164 @@
             <span class='coeur__filtre'><i class="fa-solid fa-heart coeur__filtre--plein"></i></span>
         </label>
     </section>
+    <!--COMPOSITION MENU-->
     <section class="container__fonction container__fonction-gris">
         <div class="entre-plat">
             <div class="menu">
                 <h3 class="menu__repas">ENTRÉES</h3>
-                <!--ENTREE UNE-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_la_note_enchantee' id='entree1' class='selection'>
-                    <label for='entree1' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Ravioles de foie gras</span>
-                            <span class="assiette__texte--deux">Accompagné de leur crème à la truffe</span>
-                        </span>
-                        <span class="assiette__prix">25€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--ENTREE DEUX-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_la_note_enchantee' id='entree2' class='selection'>
-                    <label for='entree2' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Caviar osciètre</span>
-                            <span class="assiette__texte--deux">Sur blini à la farine de blé noir</span>
-                        </span>
-                        <span class="assiette__prix">35€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--ENTREE TROIS-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_la_note_enchantee' id='entree3' class='selection'>
-                    <label for='entree3' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Homard et espuma de potiron</span>
-                            <span class="assiette__texte--deux">Mariné aux zestes d'orange</span>
-                        </span>
-                        <span class="assiette__prix">20€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--ENTREE QUATRE-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_la_note_enchantee' id='entree4' class='selection'>
-                    <label for='entree4' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Foie gras de canard cuit entier</span>
-                            <span class="assiette__texte--deux">Confiture de figue et pain toasté</span>
-                        </span>
-                        <span class="assiette__prix">35€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
+                <div class="menu__repas--allchoix">
+                    <!--ENTREE UNE-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_la_note_enchantee' id='entree1' class='selection'>
+                        <label for='entree1' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Ravioles de foie gras</span>
+                                <span class="assiette__texte--deux">Accompagné de leur crème à la truffe</span>
+                            </span>
+                            <span class="assiette__prix">25€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--ENTREE DEUX-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_la_note_enchantee' id='entree2' class='selection'>
+                        <label for='entree2' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Caviar osciètre</span>
+                                <span class="assiette__texte--deux">Sur blini à la farine de blé noir</span>
+                            </span>
+                            <span class="assiette__prix">35€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--ENTREE TROIS-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_la_note_enchantee' id='entree3' class='selection'>
+                        <label for='entree3' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Homard et espuma de potiron</span>
+                                <span class="assiette__texte--deux">Mariné aux zestes d'orange</span>
+                            </span>
+                            <span class="assiette__prix">20€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--ENTREE QUATRE-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_la_note_enchantee' id='entree4' class='selection'>
+                        <label for='entree4' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Foie gras de canard cuit entier</span>
+                                <span class="assiette__texte--deux">Confiture de figue et pain toasté</span>
+                            </span>
+                            <span class="assiette__prix">35€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
                 </div>
             </div>
             <div class="menu_p">
-                <p class="menu__repas">PLATS</p>
-                <!--PLAT UN-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_la_note_enchantee' id='repas1' class='selection'>
-                    <label for='repas1' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Noix de coquilles Saint-Jacques</span>
-                            <span class="assiette__texte--deux">Sur lit de purée de céleri-rave</span>
-                        </span>
-                        <span class="assiette__prix">40€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--PLAT DEUX-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_la_note_enchantee' id='plat2' class='selection'>
-                    <label for='plat2' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Langoustine poêlée</span>
-                            <span class="assiette__texte--deux">Purée de patate douce</span>
-                        </span>
-                        <span class="assiette__prix">35€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--PLAT TROIS-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_la_note_enchantee' id='plat3' class='selection'>
-                    <label for='plat3' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Mijoté de queue de boeuf</span>
-                            <span class="assiette__texte--deux">Et riz sauvage aux zestes de citron</span>
-                        </span>
-                        <span class="assiette__prix">44€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
+                <h3 class="menu__repas">PLATS</h3>
+                <div class="menu__repas--allchoix">
+                    <!--PLAT UN-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_la_note_enchantee' id='repas1' class='selection'>
+                        <label for='repas1' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Noix de coquilles Saint-Jacques</span>
+                                <span class="assiette__texte--deux">Sur lit de purée de céleri-rave</span>
+                            </span>
+                            <span class="assiette__prix">40€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--PLAT DEUX-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_la_note_enchantee' id='plat2' class='selection'>
+                        <label for='plat2' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Langoustine poêlée</span>
+                                <span class="assiette__texte--deux">Purée de patate douce</span>
+                            </span>
+                            <span class="assiette__prix">35€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--PLAT TROIS-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_la_note_enchantee' id='plat3' class='selection'>
+                        <label for='plat3' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Mijoté de queue de boeuf</span>
+                                <span class="assiette__texte--deux">Et riz sauvage aux zestes de citron</span>
+                            </span>
+                            <span class="assiette__prix">44€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
                 </div>
             </div>
         </div>
         <!--DESSERTS-->
         <div class="menu_d">
-            <p class="menu__repas">DESSERTS</p>
-            <!--DESSERT UN-->
-            <div class="menu__repas--choix">
-                <input type="checkbox" name='menu_la_note_enchantee' id='dessert1' class='selection'>
-                <label for='dessert1' class='assiette assiette--un'>
-                    <span class="assiette__texte">
-                        <span class="assiette__texte--un">Macaron noisette et chocolat</span>
-                        <span class="assiette__texte--deux">Glace au caramel brun et sel de Guérande</span>
-                    </span>
-                    <span class="assiette__prix">18€</span>
-                    <span class='assiette--valide'>
-                        <i class="fas fa-check-circle assiette--valide--icone"></i>
-                    </span>
-                </label>
-            </div>
-            <!--DESSERT DEUX-->
-            <div class="menu__repas--choix">
-                <input type="checkbox" name='menu_la_note_enchantee' id='dessert2' class='selection'>
-                <label for='dessert2' class='assiette assiette--un'>
-                    <span class="assiette__texte">
-                        <span class="assiette__texte--un">Baba au rhum revisité</span>
-                        <span class="assiette__texte--deux">Avec son coulis de citron</span>
-                    </span>
-                    <span class="assiette__prix">22€</span>
-                    <span class='assiette--valide'>
-                        <i class="fas fa-check-circle assiette--valide--icone"></i>
-                    </span>
-                </label>
-            </div>
-            <!--DESSERT TROIS-->
-            <div class="menu__repas--choix">
-                <input type="checkbox" name='menu_la_note_enchantee' id='dessert3' class='selection'>
-                <label for='dessert3' class='assiette assiette--un'>
-                    <span class="assiette__texte">
-                        <span class="assiette__texte--un">Tarte au citron meringuée</span>
-                        <span class="assiette__texte--deux">Déstructurée</span>
-                    </span>
-                    <span class="assiette__prix">23€</span>
-                    <span class='assiette--valide'>
-                        <i class="fas fa-check-circle assiette--valide--icone"></i>
-                    </span>
-                </label>
+            <h3 class="menu__repas">DESSERTS</h3>
+            <div class="menu__repas--allchoix">
+                <!--DESSERT UN-->
+                <div class="menu__repas--choix">
+                    <input type="checkbox" name='menu_la_note_enchantee' id='dessert1' class='selection'>
+                    <label for='dessert1' class='assiette assiette--un'>
+                        <span class="assiette__texte">
+                            <span class="assiette__texte--un">Macaron noisette et chocolat</span>
+                            <span class="assiette__texte--deux">Glace au caramel brun et sel de Guérande</span>
+                        </span>
+                        <span class="assiette__prix">18€</span>
+                        <span class='assiette--valide'>
+                            <i class="fas fa-check-circle assiette--valide--icone"></i>
+                        </span>
+                    </label>
+                </div>
+                <!--DESSERT DEUX-->
+                <div class="menu__repas--choix">
+                    <input type="checkbox" name='menu_la_note_enchantee' id='dessert2' class='selection'>
+                    <label for='dessert2' class='assiette assiette--un'>
+                        <span class="assiette__texte">
+                            <span class="assiette__texte--un">Baba au rhum revisité</span>
+                            <span class="assiette__texte--deux">Avec son coulis de citron</span>
+                        </span>
+                        <span class="assiette__prix">22€</span>
+                        <span class='assiette--valide'>
+                            <i class="fas fa-check-circle assiette--valide--icone"></i>
+                        </span>
+                    </label>
+                </div>
+                <!--DESSERT TROIS-->
+                <div class="menu__repas--choix">
+                    <input type="checkbox" name='menu_la_note_enchantee' id='dessert3' class='selection'>
+                    <label for='dessert3' class='assiette assiette--un'>
+                        <span class="assiette__texte">
+                            <span class="assiette__texte--un">Tarte au citron meringuée</span>
+                            <span class="assiette__texte--deux">Déstructurée</span>
+                        </span>
+                        <span class="assiette__prix">23€</span>
+                        <span class='assiette--valide'>
+                            <i class="fas fa-check-circle assiette--valide--icone"></i>
+                        </span>
+                    </label>
+                </div>
             </div>
         </div>
         <div class="container container_btn">
