--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -43,7 +43,7 @@
         <div class="entre-plat">
             <div class="menu">
                 <h3 class="menu__repas">ENTRÉES</h3>
-                <div class="all-choix">
+                <div class="menu__repas--allchoix">
                     <!--ENTREE UNE-->
                     <div class="menu__repas--choix">
                         <input type="checkbox" name='menu_la_palette_du_gout' id='entree1' class='selection'>
@@ -89,8 +89,8 @@
                 </div>
             </div>
             <div class="menu_p">
-                <p class="menu__repas">PLATS</p>
-                <div class="all-choix">
+                <h3 class="menu__repas">PLATS</h3>
+                <div class="menu__repas--allchoix">
                     <!--PLAT UN-->
                     <div class="menu__repas--choix">
                         <input type="checkbox" name='menu_la_palette_du_gout' id='repas1' class='selection'>
@@ -138,8 +138,8 @@
         </div>
         <!--DESSERTS-->
         <div class="menu_d">
-            <p class="menu__repas">DESSERTS</p>
-            <div class="all-choix">
+            <h3 class="menu__repas">DESSERTS</h3>
+            <div class="menu__repas--allchoix">
                 <!--DESSERT UN-->
                 <div class="menu__repas--choix">
                     <input type="checkbox" name='menu_la_palette_du_gout' id='dessert1' class='selection'>
