--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -43,139 +43,145 @@
         <div class="entre-plat">
             <div class="menu">
                 <h3 class="menu__repas">ENTRÉES</h3>
-                <!--ENTREE UNE-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_le_delice_des_sens' id='entree1' class='selection'>
-                    <label for='entree1' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Tartare de thon</span>
-                            <span class="assiette__texte--deux">Assaisonné au yuzu</span>
-                        </span>
-                        <span class="assiette__prix">25€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--ENTREE DEUX-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_le_delice_des_sens' id='entree2' class='selection'>
-                    <label for='entree2' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Bouchée de homard croustillant</span>
-                            <span class="assiette__texte--deux">Et sa farandole de petits légumes</span>
-                        </span>
-                        <span class="assiette__prix">35€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--ENTREE TROIS-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_le_delice_des_sens' id='entree3' class='selection'>
-                    <label for='entree3' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Velouté de cèpes</span>
-                            <span class="assiette__texte--deux">Aux truffes</span>
-                        </span>
-                        <span class="assiette__prix">20€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
+                <div class="menu__repas--allchoix">
+                    <!--ENTREE UNE-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_le_delice_des_sens' id='entree1' class='selection'>
+                        <label for='entree1' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Tartare de thon</span>
+                                <span class="assiette__texte--deux">Assaisonné au yuzu</span>
+                            </span>
+                            <span class="assiette__prix">25€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--ENTREE DEUX-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_le_delice_des_sens' id='entree2' class='selection'>
+                        <label for='entree2' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Bouchée de homard croustillant</span>
+                                <span class="assiette__texte--deux">Et sa farandole de petits légumes</span>
+                            </span>
+                            <span class="assiette__prix">35€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--ENTREE TROIS-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_le_delice_des_sens' id='entree3' class='selection'>
+                        <label for='entree3' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Velouté de cèpes</span>
+                                <span class="assiette__texte--deux">Aux truffes</span>
+                            </span>
+                            <span class="assiette__prix">20€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
                 </div>
             </div>
             <div class="menu_p">
-                <p class="menu__repas">PLATS</p>
-                <!--PLAT UN-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_le_delice_des_sens' id='repas1' class='selection'>
-                    <label for='repas1' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Poulet rôti aux herbes de Provence</span>
-                            <span class="assiette__texte--deux">Et sa crème de truffe</span>
-                        </span>
-                        <span class="assiette__prix">40€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--PLAT DEUX-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_le_delice_des_sens' id='plat2' class='selection'>
-                    <label for='plat2' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Langouste rôtie</span>
-                            <span class="assiette__texte--deux">Et ses légumes de saison</span>
-                        </span>
-                        <span class="assiette__prix">35€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
-                </div>
-                <!--PLAT TROIS-->
-                <div class="menu__repas--choix">
-                    <input type="checkbox" name='menu_le_delice_des_sens' id='plat3' class='selection'>
-                    <label for='plat3' class='assiette assiette--un'>
-                        <span class="assiette__texte">
-                            <span class="assiette__texte--un">Côte de boeuf Angus</span>
-                            <span class="assiette__texte--deux">Et sa purée de panais</span>
-                        </span>
-                        <span class="assiette__prix">44€</span>
-                        <span class='assiette--valide'>
-                            <i class="fas fa-check-circle assiette--valide--icone"></i>
-                        </span>
-                    </label>
+                <h3 class="menu__repas">PLATS</h3>
+                <div class="menu__repas--allchoix">
+                    <!--PLAT UN-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_le_delice_des_sens' id='repas1' class='selection'>
+                        <label for='repas1' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Poulet rôti aux herbes de Provence</span>
+                                <span class="assiette__texte--deux">Et sa crème de truffe</span>
+                            </span>
+                            <span class="assiette__prix">40€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--PLAT DEUX-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_le_delice_des_sens' id='plat2' class='selection'>
+                        <label for='plat2' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Langouste rôtie</span>
+                                <span class="assiette__texte--deux">Et ses légumes de saison</span>
+                            </span>
+                            <span class="assiette__prix">35€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
+                    <!--PLAT TROIS-->
+                    <div class="menu__repas--choix">
+                        <input type="checkbox" name='menu_le_delice_des_sens' id='plat3' class='selection'>
+                        <label for='plat3' class='assiette assiette--un'>
+                            <span class="assiette__texte">
+                                <span class="assiette__texte--un">Côte de boeuf Angus</span>
+                                <span class="assiette__texte--deux">Et sa purée de panais</span>
+                            </span>
+                            <span class="assiette__prix">44€</span>
+                            <span class='assiette--valide'>
+                                <i class="fas fa-check-circle assiette--valide--icone"></i>
+                            </span>
+                        </label>
+                    </div>
                 </div>
             </div>
         </div>
         <!--DESSERTS-->
         <div class="menu_d">
-            <p class="menu__repas">DESSERTS</p>
-            <!--DESSERT UN-->
-            <div class="menu__repas--choix">
-                <input type="checkbox" name='menu_le_delice_des_sens' id='dessert1' class='selection'>
-                <label for='dessert1' class='assiette assiette--un'>
-                    <span class="assiette__texte">
-                        <span class="assiette__texte--un">Farandole de desserts</span>
-                        <span class="assiette__texte--deux">Du chef</span>
-                    </span>
-                    <span class="assiette__prix">18€</span>
-                    <span class='assiette--valide'>
-                        <i class="fas fa-check-circle assiette--valide--icone"></i>
-                    </span>
-                </label>
-            </div>
-            <!--DESSERT DEUX-->
-            <div class="menu__repas--choix">
-                <input type="checkbox" name='menu_le_delice_des_sens' id='dessert2' class='selection'>
-                <label for='dessert2' class='assiette assiette--un'>
-                    <span class="assiette__texte">
-                        <span class="assiette__texte--un">Crème brulée</span>
-                        <span class="assiette__texte--deux">Revisitée</span>
-                    </span>
-                    <span class="assiette__prix">22€</span>
-                    <span class='assiette--valide'>
-                        <i class="fas fa-check-circle assiette--valide--icone"></i>
-                    </span>
-                </label>
-            </div>
-            <!--DESSERT TROIS-->
-            <div class="menu__repas--choix">
-                <input type="checkbox" name='menu_le_delice_des_sens' id='dessert3' class='selection'>
-                <label for='dessert3' class='assiette assiette--un'>
-                    <span class="assiette__texte">
-                        <span class="assiette__texte--un">Tiramisu</span>
-                        <span class="assiette__texte--deux">À la noisette</span>
-                    </span>
-                    <span class="assiette__prix">23€</span>
-                    <span class='assiette--valide'>
-                        <i class="fas fa-check-circle assiette--valide--icone"></i>
-                    </span>
-                </label>
+            <h3 class="menu__repas">DESSERTS</h3>
+            <div class="menu__repas--allchoix">
+                <!--DESSERT UN-->
+                <div class="menu__repas--choix">
+                    <input type="checkbox" name='menu_le_delice_des_sens' id='dessert1' class='selection'>
+                    <label for='dessert1' class='assiette assiette--un'>
+                        <span class="assiette__texte">
+                            <span class="assiette__texte--un">Farandole de desserts</span>
+                            <span class="assiette__texte--deux">Du chef</span>
+                        </span>
+                        <span class="assiette__prix">18€</span>
+                        <span class='assiette--valide'>
+                            <i class="fas fa-check-circle assiette--valide--icone"></i>
+                        </span>
+                    </label>
+                </div>
+                <!--DESSERT DEUX-->
+                <div class="menu__repas--choix">
+                    <input type="checkbox" name='menu_le_delice_des_sens' id='dessert2' class='selection'>
+                    <label for='dessert2' class='assiette assiette--un'>
+                        <span class="assiette__texte">
+                            <span class="assiette__texte--un">Crème brulée</span>
+                            <span class="assiette__texte--deux">Revisitée</span>
+                        </span>
+                        <span class="assiette__prix">22€</span>
+                        <span class='assiette--valide'>
+                            <i class="fas fa-check-circle assiette--valide--icone"></i>
+                        </span>
+                    </label>
+                </div>
+                <!--DESSERT TROIS-->
+                <div class="menu__repas--choix">
+                    <input type="checkbox" name='menu_le_delice_des_sens' id='dessert3' class='selection'>
+                    <label for='dessert3' class='assiette assiette--un'>
+                        <span class="assiette__texte">
+                            <span class="assiette__texte--un">Tiramisu</span>
+                            <span class="assiette__texte--deux">À la noisette</span>
+                        </span>
+                        <span class="assiette__prix">23€</span>
+                        <span class='assiette--valide'>
+                            <i class="fas fa-check-circle assiette--valide--icone"></i>
+                        </span>
+                    </label>
+                </div>
             </div>
         </div>
         <div class="container container_btn">
